--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "debug": "tsx watch --inspect src/server.ts"
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "debug": "tsx watch --inspect --env-file .env src/server.ts"
 
   },
   "keywords": [],
